# prelaunch-options-signals

./: .env  .env.example  .gitignore  EXECUTION_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  Makefile  OPTIONS_DATA_UPGRADE.md  PHASE_STATUS.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RESEARCH_OBJECTIVES_VERIFICATION.md  SUBMISSION_CHECKLIST.md  TESTING_SUMMARY.md  WRITING_STAGE_GUIDE.md  batch_options_collector.py  check_data_sources.py  collect_earnings.py  collect_relevant_earnings.py  collect_remaining_earnings.py  driver_phase1.py  pyproject.toml  pytest.ini  requirements.txt  run_phase2_demo.py  test_data_sources.py  test_phase2.py
analysis/: cross_sectional_analysis.py  economic_significance.py  nonparametric_tests.py  requirements.txt  robustness_checks.py  simple_robustness.py  summary_statistics.py
docs/: DATA_DICTIONARY.md  METHODOLOGY.md
documentation/: best_practices.md  code_documentation.md  data_sources.md  methodology_notes.md
notebooks/: Phase_1.ipynb  phase2_polygon_smoke.ipynb
results/: FINAL_COMPREHENSIVE_REPORT.md  README.md  analysis_report.md  final_research_report.md  options_analysis_report.md
scripts/: batch_options_collector.py  polygon_contract_summary.py  run_phase1.py  simple_polygon_test.py  smoke_polygon.py  update_visualizations.py
src/: __init__.py  analysis.py  comprehensive_analysis.py  comprehensive_options_analysis.py  comprehensive_options_research.py  config.py  data_ingestion_pipeline.py  earnings_analysis.py  earnings_data_collector.py  final_analysis.py  logging_setup.py  schemas.py  (+4 more)
(+127 files in other folders)
